[project]
name = "mrcombolist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pyyaml>=6.0.2",
    "rarfile>=4.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "pytest-order>=1.3.0",
]
